--- a/hello-app-web/appsettings.Development.json
+++ b/hello-app-web/appsettings.Development.json
@@ -5,5 +5,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "bg-color": "primary",
+  "env": "dev"
 }
