--- a/hello-app-web/appsettings.Production.json
+++ b/hello-app-web/appsettings.Production.json
@@ -5,5 +5,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "bg-color": "success",
+  "env": "prod"
 }
