--- a/hello-app-web/appsettings.json
+++ b/hello-app-web/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "bg-color": "danger",
+  "env": "none"
 }
