--- a/.github/workflows/main_myapp9897569.yml
+++ b/.github/workflows/main_myapp9897569.yml
@@ -12,7 +12,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    defaults:
+      working-directory: ./hello-web-app/
+      
     steps:
       - uses: actions/checkout@v2
 
