--- a/.github/workflows/main_myapp9897569.yml
+++ b/.github/workflows/main_myapp9897569.yml
@@ -13,7 +13,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     defaults:
-      working-directory: ./hello-web-app/
+      run:
+        working-directory: ./hello-web-app/
       
     steps:
       - uses: actions/checkout@v2
