--- a/.github/workflows/main_myapp9897569.yml
+++ b/.github/workflows/main_myapp9897569.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./hello-web-app/
+        working-directory: ./hello-app-web/ 
       
     steps:
       - uses: actions/checkout@v2
